--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,7 @@ body {
   min-height: 100vh;
   box-sizing: border-box;
   overflow: auto;
+  background-color: #25252d;
 }
 
 @theme inline {
@@ -58,7 +59,7 @@ body {
 
 :root {
   --radius: 0.625rem;
-  --background: oklch(0.2178 0.0000 0);
+  --background: #25252d;
   --foreground: oklch(0.145 0 0);
   --card: oklch(1 0 0);
   --card-foreground: oklch(0.145 0 0);
@@ -92,7 +93,7 @@ body {
 }
 
 .dark {
-  --background: oklch(0.145 0 0);
+  --background: #25252d;
   --foreground: oklch(0.985 0 0);
   --card: oklch(0.205 0 0);
   --card-foreground: oklch(0.985 0 0);
